@@ -138,7 +138,6 @@ toggle-catalog=Toggle Catalog
 toggle-trade-overview=Toggle Trade Overview
 claim-hex-core=Claim Hex Core
 teleport-to-hex-core=Teleport to Hex Core
-#favorite-trade=Favorite Trade
 
 [shortcut-name]
 claim-tool=Claim Hexes
@@ -149,6 +148,11 @@ hexport-tool=Enable Hexports
 hextorio-atomic-bomb-damage-multiplier=[img=utility.warning_icon] [font=default-semibold][color=yellow]Balancing:[.color][.font] [item=atomic-bomb] Damage Scale
 hextorio-base-trade-efficiency=[img=utility.warning_icon] [font=default-semibold][color=yellow]Balancing:[.color][.font] Base Trade Efficiency
 hextorio-unresearched-penalty=[img=utility.warning_icon] [font=default-semibold][color=yellow]Balancing:[.color][.font] Unresearched Penalty
+hextorio-hex-claim-cost-mult-nauvis=[img=utility.warning_icon] [font=default-semibold][color=yellow]Balancing:[.color][.font] [planet=nauvis] Claim Costs
+hextorio-hex-claim-cost-mult-vulcanus=[img=utility.warning_icon] [font=default-semibold][color=yellow]Balancing:[.color][.font] [planet=vulcanus] Claim Costs
+hextorio-hex-claim-cost-mult-fulgora=[img=utility.warning_icon] [font=default-semibold][color=yellow]Balancing:[.color][.font] [planet=fulgora] Claim Costs
+hextorio-hex-claim-cost-mult-gleba=[img=utility.warning_icon] [font=default-semibold][color=yellow]Balancing:[.color][.font] [planet=gleba] Claim Costs
+hextorio-hex-claim-cost-mult-aquilo=[img=utility.warning_icon] [font=default-semibold][color=yellow]Balancing:[.color][.font] [planet=aquilo] Claim Costs
 hextorio-nauvis-filled-edges=[img=virtual-signal.signal-alert] [font=default-semibold][color=red]Deathworld:[.color][.font] [planet=nauvis] Edges Filled
 hextorio-nauvis-grace=[img=virtual-signal.signal-alert] [font=default-semibold][color=red]Deathworld:[.color][.font] [planet=nauvis] Starter Turrets
 hextorio-claimed-hex-tile=Claimed Hex Tile
@@ -290,8 +294,13 @@ hextorio-default-aquilo-hexlight-color=[planet=aquilo] Default Hexlight Color
 
 [mod-setting-description]
 hextorio-atomic-bomb-damage-multiplier=[img=utility.warning_icon] [font=heading-2][color=yellow]BALANCING OPTION[.color][.font]\n\nMultiplier to damage from [item=atomic-bomb]. If not nerfed, looting dungeons is too easy. Set to 1.0 for original damage.
-hextorio-base-trade-efficiency=[img=utility.warning_icon] [font=heading-2][color=yellow]BALANCING OPTION[.color][.font]\n\n[color=cyan]The ratio of each trade's total value ratio from output to input.[.color]\n\n[color=gray]Setting this too close to or above 1 will make it possible to find loops between trades that generate items infinitely.\n\n[font=default-semibold]The recommended setting for removing the possibility of infinite items from trading loops is [font=heading-2]0.25[.font][.font]\n\nDoes not require starting a new game to take effect on new trades.[.color]
+hextorio-base-trade-efficiency=[img=utility.warning_icon] [font=heading-2][color=yellow]BALANCING OPTION[.color][.font]\n\n[color=cyan]The ratio of each trade's total value ratio from output to input.[.color]\n\n[color=gray]Setting this too close to or above 1 will make it possible to find loops between trades that generate items infinitely.\n\n[font=default-semibold]The recommended setting for removing the possibility of infinite items from trading loops is [font=heading-2]0.2[.font][.font]\n\nChanges take effect immediately on new trades.[.color]
 hextorio-unresearched-penalty=[img=utility.warning_icon] [font=heading-2][color=yellow]BALANCING OPTION[.color][.font]\n\nPenalty applied to trade productivity for trades that give items which haven't been researched yet. The penalty is removed once all items in the trade's outputs have been researched.\n\nNo penalty is applied to trades with unresearched items in their inputs.\n\nSet to 0 for no penalties anywhere.\n\n[color=gray]Can be negative for a reversed effect.[.color]
+hextorio-hex-claim-cost-mult-nauvis=[img=utility.warning_icon] [font=heading-2][color=yellow]BALANCING OPTION[.color][.font]\n\nThe multiplier to the cost of claiming hexes on [planet=nauvis]. Set to a lower value if lowering the "Base Trade Efficiency" (BTE) setting.\n\nWith BTE = 1.0, this setting is recommended to be 1.0.\n\nWith BTE = 0.2, this setting is recommended to be [font=heading-2]0.5[.font].\n\n[color=gray]Changes take effect immediately.[.color]
+hextorio-hex-claim-cost-mult-vulcanus=[img=utility.warning_icon] [font=heading-2][color=yellow]BALANCING OPTION[.color][.font]\n\nThe multiplier to the cost of claiming hexes on [planet=vulcanus]. Set to a lower value if lowering the "Base Trade Efficiency" (BTE) setting.\n\nWith BTE = 1.0, this setting is recommended to be 1.0.\n\nWith BTE = 0.2, this setting is recommended to be [font=heading-2]0.1[.font].\n\n[color=gray]Changes take effect immediately.[.color]
+hextorio-hex-claim-cost-mult-fulgora=[img=utility.warning_icon] [font=heading-2][color=yellow]BALANCING OPTION[.color][.font]\n\nThe multiplier to the cost of claiming hexes on [planet=fulgora]. Set to a lower value if lowering the "Base Trade Efficiency" (BTE) setting.\n\nWith BTE = 1.0, this setting is recommended to be 1.0.\n\nWith BTE = 0.2, this setting is recommended to be [font=heading-2]0.1[.font].\n\n[color=gray]Changes take effect immediately.[.color]
+hextorio-hex-claim-cost-mult-gleba=[img=utility.warning_icon] [font=heading-2][color=yellow]BALANCING OPTION[.color][.font]\n\nThe multiplier to the cost of claiming hexes on [planet=gleba]. Set to a lower value if lowering the "Base Trade Efficiency" (BTE) setting.\n\nWith BTE = 1.0, this setting is recommended to be 1.0.\n\nWith BTE = 0.2, this setting is recommended to be [font=heading-2]0.1[.font].\n\n[color=gray]Changes take effect immediately.[.color]
+hextorio-hex-claim-cost-mult-aquilo=[img=utility.warning_icon] [font=heading-2][color=yellow]BALANCING OPTION[.color][.font]\n\nThe multiplier to the cost of claiming hexes on [planet=aquilo]. Set to a lower value if lowering the "Base Trade Efficiency" (BTE) setting.\n\nWith BTE = 1.0, this setting is recommended to be 1.0.\n\nWith BTE = 0.2, this setting is recommended to be [font=heading-2]0.01[.font].\n\n[color=gray]Changes take effect immediately.[.color]
 hextorio-nauvis-filled-edges=[img=virtual-signal.signal-alert] [font=heading-2][color=red]DEATHWORLD OPTION[.color][.font]\n\nAll hex edges on [planet=nauvis] are pre-filled. The recommended deathworld experience is to set biter frequency to maximum.\n\n[color=gray]Has a very large impact on gameplay. Starting a new game is recommended.[.color]
 hextorio-nauvis-grace=[img=virtual-signal.signal-alert] [font=heading-2][color=red]DEATHWORLD OPTION[.color][.font]\n\nThe spawn hex starts with turrets and finite ammo.
 hextorio-claimed-hex-tile=The tile used to pave over claimed hexes.
